--- a/style.css
+++ b/style.css
@@ -10,12 +10,11 @@ header, footer{
     height: 120px; 
 }
 
-
 .header-container{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 0 30px;
+    margin: 0 80px;
     height: 100%;
 }
 
@@ -33,6 +32,7 @@ header, footer{
     width: 120px;
     height: 30px;
     border-radius: 10px;
+    cursor: pointer;
 }
 
 .left-header h1{
@@ -42,20 +42,23 @@ header, footer{
 
 main{
     background-color: aquamarine;
+    height: calc(100vh - 240px);
+    overflow-y: auto;
+    padding: 50px 0;
 }
 
 #grid{
     display: flex;
     flex-wrap: wrap;
     align-content: flex-start;
-    width: 1100px;
-    height: 1100px;
+    width: 1400px;
+    height: 1400px;
     margin: 0 auto;
 }
 
 #grid .cell{
-    flex-basis: calc(1100px / 10);
-    height: calc(1100px / 10);
+    flex-basis: calc(1400px / 10);
+    height: calc(1400px / 10);
     border: 1px solid coral;  
     cursor: pointer;
     display: flex;
@@ -65,4 +68,23 @@ main{
 
 #grid .cell.clicked{
     background-color: dodgerblue;
+}
+
+.footer-right{
+    height: 100%;
+    display: flex;
+    align-items: center;
+    margin: 0 80px;
+}
+
+.fa-heart{
+    margin: 0 10px;
+}
+
+#boolean-link{
+    color: purple;
+}
+
+.footer-right *{
+    font-size: 25px;
 }
