--- a/style.css
+++ b/style.css
@@ -5,11 +5,13 @@
   box-sizing: border-box;
 }
 
+/* Generics */
 header, footer{
     background-color: whitesmoke;
     height: 120px; 
 }
 
+/* Header */
 .header-container{
     display: flex;
     align-items: center;
@@ -40,20 +42,33 @@ header, footer{
     font-weight: bold;
 }
 
+
+/* Main */
 main{
     background-color: aquamarine;
-    height: calc(100vh - 240px);
+    /* height: calc(100vh - 240px); */
     overflow-y: auto;
     padding: 50px 0;    
 }
 
 #grid{
     display: flex;
+    justify-content: center;
     flex-wrap: wrap;
     align-content: flex-start;
     width: 1400px;
     height: 1400px;
     margin: 0 auto;
+}
+
+#grid h1{
+    color: coral;
+    font-size: 80px;
+    font-weight: bold;
+}
+
+#grid h1.d-none{
+    display: none;
 }
 
 #grid .cell{
@@ -70,6 +85,8 @@ main{
     background-color: dodgerblue;
 }
 
+
+/* Footer */
 .footer-right{
     height: 100%;
     display: flex;
